[package]
name = "anglow"
version = "0.1.0"
edition = "2021"

[features]
static = []

[dependencies]

[build-dependencies]
zip = "2"

[dev-dependencies]
glutin-winit = { version = "0.5", features = ["egl"] }
glutin = { version = "0.32", features = ["egl"] }
raw-window-handle = "0.6"
winit = { version = "0.30", features = ["rwh_06"] }
glow = "0.14.0"
